@@ -5,6 +5,7 @@ Pending changes in the mainline
 * Plugins can extend Orthanc Explorer with custom JavaScript
 * Instances without PatientID are now allowed
 * Support of Tudor DICOM in Query/Retrieve
+* Fix issue 25 (AET with underscore not allowed)
 
 
 Version 0.8.5 (2014/11/04)
